# pulumi-hackathon-static-site

./: Pulumi.dev.yaml  README.md  pyproject.toml
_site/: Pulumi.dev.yaml  Pulumi.yaml
rsi-dev/: _config.yml
rsi-dev/_posts/: 2025-04-06-welcome-to-jekyll.markdown
