[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool]
[tool.poetry]
package-mode = false
[tool.poetry.dependencies]
pulumi = ">=3.0.0,<4.0.0"
pulumi-gcp = ">=8.0.0,<9.0.0"
pulumi-synced-folder = ">=0.0.0,<1.0.0"
python = "^3.9"
virtualenv = "^20.30.0"
setuptools = "^78.1.0"
